<resources>
    <string name="iFame_set_favourite_canteen_title">Scegli la tua mensa</string>
    <string name="iFame_set_favourite_canteen_explanation">Benvenuto in iFame!\nScegli la mensa che frequenti abitualmente</string>
    <string name="iFame_set_favourite_canteen_details">Sarà poi possibile modificare la scelta dalla pagina di iFretta</string>
    <string name="iFame_set_favourite_canteen_confirm_button">Conferma</string>
    <string name="iFame_set_favourite_canteen_menu_item">Imposta mensa preferita</string>
    <string name="iFame_set_favourite_canteen_fragment">setFavouriteCanteenFragment</string>
    <string name="iFame_main_title_activity">iFame</string>
    <string name="iFameMain_favourite_mensa">Mensa Preferita</string>
    <string name="mense_updated">Sono state aggiornate le mense! Seleziona la tua mensa abituale</string>
    <string name="iFretta_label_select_favourite_mensa">Seleziona la tua mensa abituale per avere un accesso piu\' rapido a tutte le funzionalita\' di iFame</string>
    <string name="iFretta_title_activity">iFretta</string>
    <string name="iFretta_details_title_activity">Webcam mensa</string>
    <string name="iFretta_search_in_ViviTrento">Cerca in ViviTrento</string>
    <string name="iFretta_webcam_details">Ogni giorno dalle 12 alle 14 puoi controllare, in tempo reale, la fila presso la tua mensa per scegliere il momento migliore per andare a mangiare</string>
    <string name="iFretta_favourite_selection_done">Fatto</string>
    <string name="iFretta_favourite_canteen_is">La mensa impostata come preferita e\':</string>
    <string name="iDeciso_title_activity">iFame</string>
    <string name="iDeciso_home_daily_menu">Menù del giorno</string>
    <string name="iDeciso_home_menu_types">Tipologie di menù</string>
    <string name="iDeciso_home_compose_menu">Componi il tuo menù</string>
    <string name="iDeciso_home_monthly_menu">Menù del mese</string>
    <string name="iDeciso_tipologie_menu_fragment_intero">tipologiaInteroFragment</string>
    <string name="iDeciso_tipologie_menu_fragment_ridotto">tipologiaRidottoFragment</string>
    <string name="iDeciso_tipologie_menu_fragment_snack">tipologiaSnackFragment</string>
    <string name="iDeciso_daily_menu_daily_fragment">menuGiornoFragment</string>
    <string name="iDeciso_daily_menu_alternatives_fragment">menuGiornoAlternativeFragment</string>
    <string name="iDeciso_tipologie_menu_credito_sufficiente">Il tuo credito è sufficiente: €</string>
    <string name="iDeciso_tipologie_menu_credito_insufficiente">Credito insufficiente ad acquistare il menù</string>
    <string name="error_compose_menu">Errore! Devi prima comporre il tuo menù</string>
    <string name="iDeciso_compose_menu_checkbox_first">Primo</string>
    <string name="iDeciso_compose_menu_checkbox_pastastation">Pasta station</string>
    <string name="iDeciso_compose_menu_checkbox_panino">Panino</string>
    <string name="iDeciso_compose_menu_checkbox_tranciopizza">Trancio maxi pizza</string>
    <string name="iDeciso_compose_menu_checkbox_pizza">Pizza</string>
    <string name="iDeciso_compose_menu_title_primi">Primi piatti</string>
    <string name="iDeciso_compose_menu_title_secondicontorni">Secondi / Contorni</string>
    <string name="iDeciso_compose_menu_checkbox_piattofreddo">Piatto freddo</string>
    <string name="iDeciso_compose_menu_checkbox_caffe">Caffè</string>
    <string name="iDeciso_compose_menu_checkbox_pane2">2 Pane</string>
    <string name="iDeciso_compose_menu_title_altro">Altro</string>
    <string name="iDeciso_compose_menu_checkbox_second">Secondo Piatto</string>
    <string name="iDeciso_compose_menu_checkbox_contorno_caldo">Contorno A</string>
    <string name="iDeciso_compose_menu_checkbox_contorno1">1 Contorno</string>
    <string name="iDeciso_compose_menu_checkbox_contorno2">2 Contorni</string>
    <string name="iDeciso_compose_menu_checkbox_dessert">Dessert</string>
    <string name="iDeciso_compose_menu_checkbox_pane1">1 Pane</string>
    <string name="iDeciso_compose_menu_checkbox_acqua">Acqua (50cl)</string>
    <string name="iDeciso_compose_menu_checkbox_salsa2">2 Salse</string>
    <string name="iDeciso_compose_menu_calcola_btn">Calcola!</string>
    <string name="iDeciso_compose_menu_checkbox_insalatona">Insalatona</string>
    <string name="iDeciso_alternative_btn">Alternative</string>
    <string name="iDeciso_menu_del_giorno_primi">Primi</string>
    <string name="iDeciso_menu_del_giorno_secondi">Secondi</string>
    <string name="iDeciso_menu_del_giorno_contorni">Contorni</string>
    <string name="iDeciso_menu_del_giorno_piatti_freddi">Piatti Freddi</string>
    <string name="iDeciso_alternative_primi">PRIMI PIATTI</string>
    <string name="iDeciso_alternative_secondi">SECONDI PIATTI</string>
    <string name="iDeciso_caffe_o_2_salse">Caffè o 2 salse</string>
    <string name="iDeciso_alternative_contorni">CONTORNI CALDI</string>
    <string name="iDeciso_alternative_menu">Alternative al menù odierno</string>
    <string name="iDeciso_2contorni">2 Contorni</string>
    <string name="iDeciso_pane">Pane</string>
    <string name="iDeciso_acqua">Acqua</string>
    <string name="iDeciso_pizza_trancio">Pizza (trancio)</string>
    <string name="iDeciso_contorno_o_dessert">Contorno o Dessert</string>
    <string name="iDeciso_acqua_o_caffe">Acqua o Caffè</string>
    <string name="iDeciso_panino">Panino</string>
    <string name="iDeciso_2a_scelta_tra">2 a scelta tra</string>
    <string name="iDeciso_contorni">Contorni</string>
    <string name="iDeciso_pizza">Pizza</string>
    <string name="iDeciso_menu_types_intero">INTERO</string>
    <string name="iDeciso_menu_types_ridotto">RIDOTTO</string>
    <string name="iDeciso_menu_types_snack">SNACK</string>
    <string name="iDeciso_o">o</string>
    <string name="iDeciso_e">e</string>
    <string name="iDeciso_menu_intero_price"><u>€4,90</u></string>
    <string name="iDeciso_menu_ridotto_price"><u>€4,40</u></string>
    <string name="iDeciso_menu_snack_price"><u>€3,10</u></string>
    <string name="iDeciso_menu_mese_settimana">Settimana</string>
    <string name="iDeciso_GoogleSearchAlertText">Mostrare risultati per: </string>
    <string name="iDeciso_GoogleSearchAlertAccept">Avvia ricerca</string>
    <string name="iDeciso_alternatives_title_activity">Alternative</string>
    <string name="iDeciso_compose_menu_no_items_selected">Seleziona almeno un piatto!</string>
    <string name="iDeciso_monthly_menu_january">Gennaio</string>
    <string name="iDeciso_monthly_menu_february">Febbraio</string>
    <string name="iDeciso_monthly_menu_march">Marzo</string>
    <string name="iDeciso_monthly_menu_april">Aprile</string>
    <string name="iDeciso_monthly_menu_may">Maggio</string>
    <string name="iDeciso_monthly_menu_june">Giugno</string>
    <string name="iDeciso_monthly_menu_july">Luglio</string>
    <string name="iDeciso_monthly_menu_august">Agosto</string>
    <string name="iDeciso_monthly_menu_september">Settembre</string>
    <string name="iDeciso_monthly_menu_october">Ottobre</string>
    <string name="iDeciso_monthly_menu_november">Novembre</string>
    <string name="iDeciso_monthly_menu_december">Dicembre</string>
    <string name="iDeciso_monthly_menu_of">Menù di</string>
    <string name="iDeciso_monthly_menu_from">Dal</string>
    <string name="iDeciso_monthly_menu_to">al</string>
    <string name="iGradito_recensioni_order_by_date">Ordina per data</string>
    <string name="iGradito_recensioni_order_by_likes">Ordina per likes</string>
    <string name="iGradito_spinner">Scegli una categoria</string>
    <string name="iGradito_search">Ricerca un piatto</string>
    <string name="iGradito_add_comment">Aggiungi una recensione</string>
    <string name="iGradito_title_activity">iGradito</string>
    <string name="iGradito_recensioni_title_activity">Recensioni_Activity</string>
    <string name="iGradito_Activity">iGradito</string>
    <string name="iGradito_Piatti_activity">iGradito</string>
    <string name="iGradito_no_one_left_comment">Qualcuno ha dato un voto a questo piatto ma non ha lasciato nessun commento.  Aggiungi tu una recensione o un commento cliccando il bottone in alto</string>
    <string name="iGradito_no_reviews_available">Nessuno ha ancora inserito una recensione a questo piatto. Aggiungi tu una recensione o un commento cliccando il bottone in alto</string>
    <string name="iGradito_review_header">Recensioni</string>
    <string name="iGradito_not_available">Non disponibile</string>
    <string name="iGradito_average_vote">Giudizio medio: </string>
    <string name="iGradito_expressed_by">Espresso da: </string>
    <string name="iGradito_user_voto_label">Voto: </string>
    <string name="iGradito_insert_comment_here">Inserisci qui il tuo commento</string>
    <string name="iGradito_spinner_label_excelent">Ottimo</string>
    <string name="iGradito_spinner_label_bad">Pessimo</string>
    <string name="iGradito_dialog_button_add_text">Aggiungi</string>
    <string name="iGradito_dialog_button_cancel_text">Chiudi</string>
    <string name="iGradito_user">Utente</string>
    <string name="iGradito_users">Utenti</string>
    <string name="iGradito_recensione_aggiunta_correttamente">La tua recensione e\' stata aggiunta correttamente</string>
    <string name="iGradito_recensione_non_aggiunta">Purtroppo la tua recensione non e\' stata aggiunta correttamente. Riprova</string>
    <string name="iSoldi_title_sctivity">iSoldi</string>
    <string name="iSoldi_puoi_acquistare">Puoi acquistare:</string>
    <string name="iSoldi_devi_ricaricare">Devi ricaricare</string>
    <string name="iSoldi_credito_residuo">Il tuo credito residuo:</string>
    <string name="iSoldi_title_activity">iSoldi</string>
    <string name="iSoldi_statistic_button_text">Le tue statistiche </string>
    <string name="iSoldi_euro_char">€</string>
    <string name="iSoldi_credit_status_not_available">Non disponibile</string>
    <string name="iSoldi_unitn_login_required">Per visualizzare il tuo credito devi essere loggato con Unitn</string>
    <string name="iSoldi_press_again_to_exit">Caricamento in corso. Premi indietro per uscire</string>
    <string name="iSoldi_message_credit_not_updated">Il credito può non essere aggiornato alle transazioni delle ultime 12 ore</string>
    <string name="view_review">Visualizza le recensioni</string>
    <string name="rate_dish">Dai un giudizio</string>
    <string name="search_on_google">Cerca su Internet</string>
    <string name="app_uid_label">SmartCampus</string>
    <string name="app_name">iFame</string>
    <string name="menu_settings">Settings</string>
    <string name="tv_data">User Data</string>
    <string name="tv_from_user_account">From user account:</string>
    <string name="tv_user_id">User ID</string>
    <string name="tv_from_ac_service">From AC service:</string>
    <string name="tv_attributes">Attributes</string>
    <string name="tv_from_profile_service">From profile service:</string>
    <string name="tv_name">Name</string>
    <string name="title_activity_file">FileActivity</string>
    <string name="iFame">iFame</string>
    <string name="photo_btn_label">Upload a photo!</string>
    <string name="action_settings">Settings</string>
    <string name="remote_file_storage_demo_label">Remote_File_Storfage</string>
    <string name="refresh">Ricarica</string>
    <string name="menu_title_tutorial">Tutorial</string>
    <string name="tut_star">Seleziona la tua mensa preferita</string>
    <string name="tut_ifame">Consulta I menu e verifica cosa comprendono</string>
    <string name="tut_ifretta">Tieni d’occhio la coda in mensa</string>
    <string name="tut_isoldi">Controlla il credito redisuo della tua card</string>
    <string name="tut_igradito">Valuta le pietanze, scrivi una recensione o leggi i commenti degli altri utenti</string>
</resources>