<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:id="@+id/custom_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="hello"
        android:textSize="20sp" />

    <!-- android:entries="@array/lista_mense" -->

    <SeekBar
        android:id="@+id/recensioni_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="10"
        android:progress="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/pessimo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/iGradito_spinner_label_bad" />

        <TextView
            android:id="@+id/ottimo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/iGradito_spinner_label_excelent" />
    </LinearLayout>

    <EditText
        android:id="@+id/custom_dialog_etext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/iGradito_insert_comment_here"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences|textMultiLine"
        android:selectAllOnFocus="true" >
    </EditText>

</LinearLayout>