<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/date_alternative_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:textSize="18sp"
        android:text="@string/iDeciso_alternative_menu" />

    <ScrollView
        android:id="@+id/scroll_view_alt"
        android:layout_width="match_parent"
        android:layout_below="@id/date_alternative_menu"
        android:layout_height="match_parent"
        android:padding="4dp" 
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/primi_alternative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/date_alternative_menu"
                android:paddingLeft="3dp"
                android:background="#D21F1B"
                android:text="@string/iDeciso_alternative_primi"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
            
            <!-- prova -->
            	<TextView
                android:id="@+id/primi_kcal_alternative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/date_alternative_menu"
                android:paddingLeft="3dp"
                android:background="#D21F1B"
                android:paddingRight="3dp"
                android:layout_alignBottom="@+id/primi_alternative"
                android:layout_alignTop="@+id/primi_alternative"
                android:text="Kcal"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/list_view_primi_alternative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:scrollbars="none"
                android:layout_below="@id/primi_alternative" >
            </ListView>

            <TextView
                android:id="@+id/secondi_alternative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/list_view_primi_alternative"
                android:background="#D21F1B"
                android:paddingLeft="3dp"
                android:text="@string/iDeciso_alternative_secondi"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
            
            <TextView
                android:id="@+id/secondi_kcal_alternative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/list_view_primi_alternative"
                android:paddingLeft="3dp"
                android:background="#D21F1B"
                android:paddingRight="3dp"
                android:layout_alignBottom="@+id/secondi_alternative"
                android:layout_alignTop="@+id/secondi_alternative"
                android:text="Kcal"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/list_view_secondi_alternative"
                android:layout_width="match_parent"
                android:scrollbars="none"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/secondi_alternative" >
            </ListView>

            <TextView
                android:id="@+id/contorni_alternative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingLeft="3dp"
                android:layout_below="@id/list_view_secondi_alternative"
                android:background="#D21F1B"
                android:text="@string/iDeciso_alternative_contorni"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
            
            <TextView
                android:id="@+id/contorni_kcal_alternative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/list_view_secondi_alternative"
                android:paddingLeft="3dp"
                android:background="#D21F1B"
                android:paddingRight="3dp"
                android:layout_alignBottom="@+id/contorni_alternative"
                android:layout_alignTop="@+id/contorni_alternative"
                android:text="Kcal"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/list_view_contorni_alternative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/contorni_alternative" >
            </ListView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>